feat: initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -4,27 +4,27 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Dependency directories
-node_modules/
-
-# Build output
-build/
-
-# Env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Misc
+node_modules
 .DS_Store
-Thumbs.db
+dist
+dist-ssr
+coverage
+*.local
 
-# IDE files
-.vscode/
-.idea/
+/cypress/videos/
+/cypress/screenshots/
 
-# Optional cache (npr. for webpack or babel)
-.cache/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+*.tsbuildinfo
