--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch src/data/destinations-server.json --port 8080"
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.6",
+    "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
