--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/roboto": "^5.2.6",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.3",
+    "swiper": "^11.2.10",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
