--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.6",
+    "@tiptap/extension-placeholder": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
+    "@tiptap/vue-3": "^2.25.0",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.3",
     "swiper": "^11.2.10",
