--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "json-server --watch src/data/destinations-server.json --port 8080"
+    "server": "json-server --watch src/data/destinations-server.json --port 8080",
+    "test": "vitest"
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.6",
@@ -23,10 +24,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "jsdom": "^26.1.0",
+    "msw": "^1.3.2",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2"
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vitest": "^3.2.4"
   }
 }
